--- a/Proyecto/styles.css
+++ b/Proyecto/styles.css
@@ -87,12 +87,36 @@ header {
     color: #00d85e;
   }
 
-  
+  .services-section {
+    
+    .services-description {
+      grid-column: 3;
+      grid-row: 1 / 3;
+      padding: 20px;
+      background-color: #fff;
+      max-width: 500px;
+      margin-top: 150px;
+      margin-left: -150px;
 
-  .services-description p {
-    font-size: 20px;
-    color: #666;
-    margin-bottom: 20px;
+      p {
+        font-size: 20px;
+        color: #666;
+        margin-bottom: 20px;
+      }
+
+      h2,
+      h3 {
+        margin-bottom: 20px;
+      }
+
+      h3 {
+        color: #00d85e;
+      }
+
+      h2 {
+        font-size: 40px;
+      }
+    }
   }
 
   .project p {
@@ -107,8 +131,6 @@ header {
     cursor: pointer;
     transition: color 0.3s;
   }
-
-
 
   .main-header {
     display: flex;
@@ -127,8 +149,6 @@ header {
     height: auto;
     border-radius: 10px;
   }
-
-
 
   .project img {
     max-width: 100%;
@@ -221,7 +241,7 @@ header {
       background: none;
       border-radius: 5px;
     }
-  
+
     .hero-buttons .btn:hover {
       background: none;
       color: #017b35;
@@ -236,16 +256,16 @@ header {
       max-width: 50%;
       margin-left: 180px;
     }
-  
+
     .hero-content h1 {
       font-size: 36px;
       color: #333;
     }
-  
+
     .hero-buttons .btn-green {
       color: #00d85e;
     }
-  
+
     .hero-image {
       max-width: 50%;
       min-width: 20%;
@@ -253,8 +273,6 @@ header {
       margin-right: 180px;
     }
   }
-
- 
 
   .services-grid {
     display: grid;
@@ -310,29 +328,6 @@ header {
   .service-card h5 {
     font-size: 20px;
     margin-bottom: 10px;
-  }
-
-  .services-description {
-    grid-column: 3;
-    grid-row: 1 / 3;
-    padding: 20px;
-    background-color: #fff;
-    max-width: 500px;
-    margin-top: 150px;
-    margin-left: -150px;
-  }
-
-  .services-description h2,
-  .services-description h3 {
-    margin-bottom: 20px;
-  }
-
-  .services-description h3 {
-    color: #00d85e;
-  }
-
-  .services-description h2 {
-    font-size: 40px;
   }
 
   .sponsors-section {
@@ -873,8 +868,6 @@ header {
     color: #00d85e;
   }
 
-  
-
   .services-description p {
     font-size: 18px;
     color: #666;
@@ -893,8 +886,6 @@ header {
     cursor: pointer;
     transition: color 0.3s;
   }
-
-
 
   .main-header {
     display: flex;
@@ -987,7 +978,7 @@ header {
       background: none;
       border-radius: 5px;
     }
-  
+
     .hero-buttons .btn:hover {
       background: none;
       color: #017b35;
@@ -1000,16 +991,16 @@ header {
       box-sizing: border-box;
       position: relative;
     }
-  
+
     .hero-content h1 {
       font-size: 30px;
       color: #333;
     }
-  
+
     .hero-buttons .btn-green {
       color: #00d85e;
     }
-  
+
     .hero-image {
       max-width: 50%;
       min-width: 30%;
@@ -1022,17 +1013,13 @@ header {
       height: auto;
       display: block;
     }
-  
   }
-
-
 
   figure img {
     max-width: 50%;
     height: auto;
     border-radius: 10px;
   }
-
 
   .services-grid {
     display: grid;
@@ -1656,8 +1643,6 @@ header {
     color: #00d85e;
   }
 
- 
-
   .services-description p {
     font-size: 18px;
     color: #666;
@@ -1676,8 +1661,6 @@ header {
     cursor: pointer;
     transition: color 0.3s;
   }
-
-
 
   .main-header {
     display: flex;
@@ -1772,7 +1755,7 @@ header {
       background: none;
       border-radius: 5px;
     }
-  
+
     .hero-buttons .btn:hover {
       background: none;
       color: #017b35;
@@ -1785,16 +1768,16 @@ header {
       box-sizing: border-box;
       position: relative;
     }
-  
+
     .hero-content h1 {
       font-size: 30px;
       color: #333;
     }
-  
+
     .hero-buttons .btn-green {
       color: #00d85e;
     }
-  
+
     .hero-image {
       max-width: 50%;
       min-width: 30%;
@@ -1809,15 +1792,11 @@ header {
     }
   }
 
-  
-
   figure img {
     max-width: 50%;
     height: auto;
     border-radius: 10px;
   }
-
-
 
   .services-grid {
     display: grid;
@@ -2436,8 +2415,6 @@ header {
     color: #00d85e;
   }
 
-
-
   .services-description p {
     font-size: 18px;
     color: #666;
@@ -2456,8 +2433,6 @@ header {
     cursor: pointer;
     transition: color 0.3s;
   }
-
-
 
   .main-header {
     display: flex;
@@ -2552,7 +2527,7 @@ header {
       background: none;
       border-radius: 5px;
     }
-  
+
     .hero-buttons .btn:hover {
       background: none;
       color: #017b35;
@@ -2564,16 +2539,16 @@ header {
       box-sizing: border-box;
       position: relative;
     }
-  
+
     .hero-content h1 {
       font-size: 33px;
       color: #333;
     }
-  
+
     .hero-buttons .btn-green {
       color: #00d85e;
     }
-  
+
     .hero-image {
       order: 1;
       max-width: 40%;
@@ -2588,15 +2563,11 @@ header {
     }
   }
 
-  
-
   figure img {
     max-width: 50%;
     height: auto;
     border-radius: 10px;
   }
-
- 
 
   .services-grid {
     display: grid;
@@ -3213,8 +3184,6 @@ header {
     color: #00d85e;
   }
 
-
-
   .services-description p {
     font-size: 18px;
     color: #666;
@@ -3233,7 +3202,6 @@ header {
     cursor: pointer;
     transition: color 0.3s;
   }
-
 
   .main-header {
     display: flex;
@@ -3330,7 +3298,7 @@ header {
       background: none;
       border-radius: 5px;
     }
-  
+
     .hero-buttons .btn:hover {
       background: none;
       color: #017b35;
@@ -3342,16 +3310,16 @@ header {
       box-sizing: border-box;
       position: relative;
     }
-  
+
     .hero-content h1 {
       font-size: 20px;
       color: #333;
     }
-  
+
     .hero-buttons .btn-green {
       color: #00d85e;
     }
-  
+
     .hero-image {
       display: flex;
       justify-content: center;
@@ -3363,18 +3331,13 @@ header {
       height: auto;
       display: block;
     }
-  
   }
-
-  
 
   figure img {
     max-width: 50%;
     height: auto;
     border-radius: 10px;
   }
-
-  
 
   .services-grid {
     display: grid;
