--- a/Proyecto/styles.css
+++ b/Proyecto/styles.css
@@ -23,7 +23,7 @@ body {
   }
 }
 
-/****************************************/
+/***************************************  */
 
 /* Ordenador */
 
@@ -65,7 +65,7 @@ header {
         cursor: pointer;
         border-left: 2px solid #ddd;
         border-right: 2px solid #ddd;
-        padding: 0px 10px;
+        padding: 0 10px;
 
         &:hover {
           color: var(--primary-color);
@@ -212,6 +212,7 @@ header {
       2,
       minmax(auto, max-content)
     ); /* Control de altura */
+
     gap: clamp(16px, 2vw, 24px);
     margin: 10% auto 0;
     padding: 0 5%;
@@ -222,7 +223,7 @@ header {
       background-color: white;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgb(0 0 0 / 10%);
       max-width: 150px;
       width: 100%;
       margin: 0 auto;
@@ -248,9 +249,7 @@ header {
       &:nth-child(1) {
         grid-column: 1;
         grid-row: 1 / span 2; /* Ocupa 2 filas */
-        align-self: center; /* Centrado vertical */
-        justify-self: center; /* Centrado horizontal */
-        margin-left: 0;
+        place-self: center center; /* Centrado vertical */ /* Centrado horizontal */
         margin-top: 0;
         height: auto; /* Altura natural */
         max-width: 180px;
@@ -397,7 +396,7 @@ header {
     }
   }
 
-  @media (max-width: 768px) {
+  @media (width <= 768px) {
     .achievements-container {
       flex-direction: column;
 
@@ -466,7 +465,7 @@ header {
     .stat {
       text-align: center;
       border-radius: 50%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgb(0 0 0 / 10%);
       padding: 20px;
       width: 100px;
       height: 100px;
@@ -565,6 +564,7 @@ header {
         min-width: 85%;
         width: 100%; /* Ocupa todo el ancho disponible */
         height: 65%; /* Altura fija para imágenes */
+
         /* Mantiene relación de aspecto */
         margin-bottom: 15px;
       }
@@ -627,7 +627,7 @@ header {
       margin: 20px 10px;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
 
       h2 {
         font-size: 12px;
@@ -762,7 +762,7 @@ footer {
     display: flex;
     justify-content: space-between;
     margin: 0 5%;
-    padding: 10px 10px;
+    padding: 10px;
     border-top: 1px solid #eae7e7;
     max-width: 1200px;
 
@@ -820,7 +820,7 @@ footer {
     }
   }
 
-  @media (max-width: 980px) {
+  @media (width <= 980px) {
     header {
       position: relative;
 
@@ -1599,7 +1599,7 @@ footer {
       }
 
       /* Responsivo 735px o menos */
-      @media (max-width: 735px) {
+      @media (width <= 735px) {
         flex-direction: column;
         padding: 15px 5px;
         gap: 0;
@@ -1613,7 +1613,7 @@ footer {
         }
 
         /* Contenedor para elementos del header (excepto logo y extras) */
-        > :not(.logo):not(.extras) {
+        > :not(.logo, .extras) {
           order: 2;
           width: 100%;
           margin: 15px 0;
@@ -1621,7 +1621,7 @@ footer {
 
         .extras {
           order: 3;
-          margin: 15px 0 0 0;
+          margin: 15px 0 0;
           width: 100%;
           justify-content: center;
           flex-wrap: wrap;
@@ -1667,8 +1667,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10% 0 10% 0;
-
+    padding: 10% 0;
     background-color: var(--light-bg);
     height: 100%;
     width: 100%;
@@ -1768,14 +1767,14 @@ footer {
         &:nth-child(2) {
           grid-column: 2;
           grid-row: 2;
-          margin-right: 0px;
+          margin-right: 0;
           margin-left: 8%;
         }
 
         &:nth-child(3) {
           grid-column: 3;
           grid-row: 2;
-          margin-right: 0px;
+          margin-right: 0;
           margin-left: 8%;
         }
       }
@@ -1970,6 +1969,7 @@ footer {
           grid-column: 2;
           grid-row: 1;
           align-self: center;
+
           strong {
             color: var(--secondary-color);
           }
@@ -1979,6 +1979,7 @@ footer {
           grid-column: 1;
           grid-row: 2;
           align-self: center;
+
           strong {
             color: #fe7757;
           }
@@ -1988,6 +1989,7 @@ footer {
           grid-column: 3;
           grid-row: 2;
           align-self: center;
+
           strong {
             color: #ffd541;
           }
@@ -1997,6 +1999,7 @@ footer {
           grid-column: 2;
           grid-row: 3;
           align-self: center;
+
           strong {
             color: #5ec2e4;
           }
@@ -2492,7 +2495,7 @@ footer {
         grid-area: description;
         padding: 20px;
         background-color: #fff;
-        margin: 0 0 2% 0;
+        margin: 0 0 2%;
         transform: none;
 
         h2,
@@ -2655,7 +2658,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    padding: 50px 0 0 0;
+    padding: 50px 0 0;
     background-color: #fff;
     max-width: 1200px;
     margin: 20px auto;
@@ -3205,7 +3208,7 @@ footer {
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    padding: 10% 0px 0px 0px;
+    padding: 10% 0 0;
     padding-bottom: 10%;
     background-color: var(--light-bg);
     height: 100%;
@@ -3262,6 +3265,7 @@ footer {
       }
     }
   }
+
   .services-section {
     .services-grid {
       display: grid;
@@ -3280,9 +3284,8 @@ footer {
         grid-area: description;
         padding: 20px;
         background-color: #fff;
-        margin-bottom: 2%;
         transform: none;
-        margin: 3% 0px 2% 0px !important;
+        margin: 3% 0 2% !important;
         text-align: center;
 
         h2 {
@@ -3316,11 +3319,13 @@ footer {
           max-width: 80%;
           margin-left: auto;
         }
+
         &:nth-child(2) {
           grid-area: card2;
           max-width: 80%;
           margin-left: auto;
         }
+
         &:nth-child(3) {
           grid-area: card3;
           max-width: 80%;
@@ -3506,6 +3511,7 @@ footer {
           grid-row: 1;
           align-self: center;
         }
+
         &:nth-child(2) {
           grid-column: 1;
           grid-row: 2;
@@ -3530,12 +3536,15 @@ footer {
           &[data-color="purple"] {
             color: var(--secondary-color);
           }
+
           &[data-color="orange"] {
             color: #fe7757;
           }
+
           &[data-color="yellow"] {
             color: #ffd541;
           }
+
           &[data-color="blue"] {
             color: #5ec2e4;
           }
@@ -3789,7 +3798,7 @@ footer {
 
         .footer-copyright p {
           font-size: 10px;
-          margin: 0 0 10px 0;
+          margin: 0 0 10px;
         }
 
         .footer-links {
