--- a/Proyecto/styles.css
+++ b/Proyecto/styles.css
@@ -99,6 +99,9 @@ header {
         display: flex;
         list-style: none;
         gap: 20px;
+        margin: 0;  
+        padding: 0;
+        margin-bottom: 2%;
 
         li a {
           color: #000;
@@ -791,7 +794,7 @@ footer {
 /* Media Queries */
 
 /* Tablets */
-@media (width >= 768px) and (width <= 1062px) {
+@media (width >= 769px) and (width <= 1062px) {
   :root {
     --section-margin: clamp(2rem, 5vw, 4rem);
     --content-padding: clamp(1rem, 3vw, 2rem);
@@ -1600,7 +1603,7 @@ footer {
       }
 
       /* Responsivo 735px o menos */
-      @media (width <= 767px) {
+      @media (width <= 769px) {
         flex-direction: column;
         padding: 15px 5px;
         gap: 0;
@@ -1649,6 +1652,9 @@ footer {
         display: flex;
         list-style: none;
         gap: 20px;
+        margin: 0;  
+        padding: 0;
+        margin-bottom: 2%;
 
         li a {
           color: black;
@@ -2398,24 +2404,29 @@ footer {
       display: flex;
       order: 1;
       justify-content: center;
-
+ 
+    
       ul {
         display: flex;
         list-style: none;
         gap: 20px;
-
+        margin: 0;  
+        padding: 0;
+        margin-bottom: 2%;
+    
         li a {
           color: black;
           text-decoration: none;
           font-size: 14px;
           transition: color 0.3s;
-
+    
           &:hover {
             color: var(--primary-color);
           }
         }
       }
     }
+    
   }
 
   #hero {
@@ -3097,7 +3108,6 @@ footer {
           color: #333;
           border-left: 2px solid #ddd;
           border-right: 2px solid #ddd;
-          border-bottom: 2px solid #ddd;
           padding: 0 10px;
           text-decoration: none;
           margin: 0;
@@ -3187,6 +3197,8 @@ footer {
         display: none;
         list-style: none;
         gap: 20px;
+        margin-bottom: 8% !important;
+
 
         li a {
           color: black;
