--- a/Proyecto/styles.css
+++ b/Proyecto/styles.css
@@ -2802,10 +2802,12 @@ footer {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      gap: 20px;
+      max-width: 1200px;
+      margin: 0 auto;
 
       .project {
         width: 380px;
-        height: 380px;
         max-width: 500px;
         text-align: center;
         padding: 10px;
